# exam-bank-pipeline

./: .gitignore  ARCHITECTURE.md  PROJECT_REVIEW_TEXT_EXTRACTION_PHASE.md  README.md  REVIEW_PASS_2026-04-22.md  ROADMAP.md  auto-grade-roadmap.md  changelog_9709_p3_v1.json  config.yaml  coverage_report_9709_m1_v1.json  coverage_report_all_components_v1.json  exam_bank_input.jsonl  index.html  pyproject.toml  question_skill_mappings_9709_p3_v1.json  run_full_deepseek_v2.sh  skill_map_9709_m1_v1.json  skill_map_9709_p3_v1.json  skill_map_9709_s1_v1.json  skill_map_validation_v1.json
.agent-loop/: BACKLOG.md  OBJECTIVE.md  project-gates.md
.agent-runs/: latest
agentic-loop-template/: .gitignore  README.md
asterion_content_lab_loop_handoffs/: README.md  agent1_plan.md  agent2_impl_notes.md  agent3_tests.md  agent4_integration.md  agent5_review.md
docs/: ADVISORY_EVIDENCE_CONTRACT.md  AI_ASSISTED_ENRICHMENT.md  ASTERION_EXPORT_CONTRACT.md  AUTO_GRADING_CONTRACT.md  AUTO_TRIAGE.md  COMMAND_ATLAS.md  DIFFICULTY_INDEX_CONTRACT.md  GOAL-2.md  GOALS-1.md  GOALS.md  MARK_EVENTS_CONTRACT.md  OUTPUT_STORAGE_CONTRACT.md  P3_EXACT_SKILL_EVIDENCE_PLAN.md  P3_EXACT_SKILL_EVIDENCE_READINESS_2026_05_25.md  PHASE_1_CLEANUP_PREREQ_CLOSEOUT.md  PROJECT_AUDIT_AND_OPTIMIZATION_REVIEW.md  PROJECT_REVIEW.md  RELEASE_VALIDATION_CHECKLIST.md  ROADMAP.md  SUBMISSION_EMAIL_INTAKE_CONTRACT.md  SUBMISSION_FIRST_ASSIGNMENT_RUNBOOK.md  SUBMISSION_LIVE_EMAIL_CONNECTOR_CONTRACT.md  SUBMISSION_OUTGOING_EMAIL_CONTRACT.md  SUBMISSION_PRIVACY_BOUNDARIES.md  SUBMISSION_TRACKING_CONTRACT.md  (+3 more)
(+812 files in other folders)
