[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-bank-pipeline"
version = "0.1.0"
description = "CAIE 9709 question-paper and mark-scheme extraction pipeline."
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "PyYAML>=6.0.0",
  "openai>=1.60.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exam_bank = ["runtime_profile.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
